payer_agentforce_agents/ProviderTerminationAgent/force-app/main/default/objects/Authorization__c/Authorization__c.object-meta.xml
<CustomObject>
    <label>Authorization</label>
    <nameField>
        <displayFormat>Auth-{0000}</displayFormat>
        <label>Authorization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>