payer_agentforce_agents/ProviderTerminationAgent/force-app/main/default/objects/Authorization__c/fields/Authorization_Type__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Type__c</fullName>
    <label>Authorization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Lab Test</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>