payer_agentforce_agents/ProviderTerminationAgent/force-app/main/default/objects/Authorization__c/fields/Healthcare_Provider__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Provider</label>
    <referenceTo>HealthcareProvider</referenceTo>
    <relationshipLabel>Authorizations</relationshipLabel>
    <relationshipName>Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>